Fix z-index of nav-menu to not block links in posts-list. Phew!

--- a/theme-styles/_header.scss
+++ b/theme-styles/_header.scss
@@ -71,7 +71,7 @@
 
   &.closed {
     transition: opacity $menu-transition;
-    z-index: 0;
+    z-index: -1;
     opacity: 0;
   }
   &.opened {
